# opus

./: CMakeLists.txt  README.md  memory.sh  test.sh
.github/workflows/: opus-check.yml
include/: version.h
include/abstract_term/: abstract_term.h
include/grammar/: _grammar_declare.h  grammar.h
include/utils/: memory.h
src/: main.cpp  version.cpp
src/grammar/: grammar.cpp
tests/: CMakeLists.txt  test_grammar.cpp  test_transform.cpp
